# java-magazin-2019

./: .gitignore  Makefile  README.md  abbildungen.pptx  comments.md  funktionale-softwarearchitektur.docx  funktionale-softwarearchitektur.md
Autoren_Kit_S&S/Autoren_Kit_S&S/Dokumentenvorlagen/: SuS_Dokumentvorlage.dot
Autoren_Kit_S&S/Dokumentenvorlagen/: SuS_Dokumentvorlage.ott  SuS_Dokumentvorlage.template
english/: Makefile  functional-hearts.md
hearts/: LICENSE  README.md  default.nix  hearts.cabal  stack.yaml
hearts/src/: AltGameplay.hs  Cards.hs  ExampleCards.hs  Game.hs  Gamedata.hs  Gameplay.hs  GameplayT.hs  ITree.hs  Main.hs  RWT.hs
